adding new fixes and adding static pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,7 +204,7 @@ html.no-transition *:after {
     }
 
     .size-option.active {
-        @apply bg-blue-600 text-white border-blue-600;
+        @apply bg-primary-600 text-white border-primary-600;
     }
 
     .color-option {
